<debug>: fix user own post not showing on profile page

--- a/src/assets/style/edit_post.css
+++ b/src/assets/style/edit_post.css
@@ -27,5 +27,5 @@
     width: 60%;
 }
 
-.form-buttons {
-}
+/* .form-buttons {
+} */
